shared/css/styles.css
/* ... */
.top-navbar-inner {
  width: 100%;
  max-width: 1050px;

  height: 100%;

  margin-left: auto;
  margin-right: auto;

  padding-left: 24px;
  padding-right: 40px;

  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-link {
  display: inline-flex;
  align-items: center;
  gap: 6px;

  color: #ffffff;
  opacity: 0.98;
  text-decoration: none;

  font-size: 15px;
  font-weight: 400;
}

.nav-link-icon {
  width: 12px;
  height: 12px;

  flex: 0 0 auto;

  transform: rotate(90deg) translateX(-0.5px);
}

.toc-button {
  display: inline-flex;
  align-items: center;
  gap: 8px;

  background: none;
  border: none;
  padding: 0;

  color: white;
  opacity: 0.98;

  font-size: 15px;
  font-weight: 400;
  font-family: inherit;

  cursor: pointer;
}

.toc-button-icon {
  width: 18px;
  height: 18px;

  flex: 0 0 auto;

  transform: translateY(-0.5px);
}

/* ========================================= */
/* Floating TOC button */
/* ========================================= */

.floating-toc-button {
  position: fixed;

  top: 14px;

  right:max(clamp(20px, 5vw, 40px), calc((100% - 1050px) / 2 + 40px));
  margin-right: -8px;

  width: 34x;
  height: 34px;

  display: flex;
  align-items: center;
  justify-content: center;

  padding: 0;

  background: none;
  border: none;

  cursor: pointer;

  z-index: 1100;

  opacity: 0;
  visibility: hidden;

  transition:
    opacity 200ms ease,
    transform 200ms ease,
    visibility 200ms;
}

.floating-toc-icon {
  width: 34px;
  height: 34px;

  display: block;
}

.floating-toc-icon-bg {

  fill: rgba(255,255,255,0.97);

  stroke: #0A1F44;
  stroke-width: 0.5;
  stroke-opacity: 0.75;

  transition:
    fill 200ms ease,
    stroke 200ms ease;

}

.floating-toc-icon-lines {

  fill: #0A1F44;

  transition: fill 200ms ease;

}

/* === HOVER === */

.floating-toc-button:hover
.floating-toc-icon-lines {

  fill: white;

}

.floating-toc-button:hover
.floating-toc-icon-bg {

  fill: #002a72;
  stroke: #002a72;
}

.floating-toc-button-visible {
  opacity: 1;
  visibility: visible;
}

/* ========================================= */
/* TOC panel */
/* ========================================= */

.toc-overlay {
  position: fixed;
  
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  background: rgba(0, 0, 0, 0.22);

  opacity: 0;
  visibility: hidden;

  transition:
    opacity 220ms ease,
    visibility 220ms;

  z-index: 1200;

  touch-action: none;
  will-change: opacity;
  backface-visibility: hidden;
  transform: translateZ(0);
}

.toc-panel {
  position: fixed;

  top: 0;
  right: 0;
  bottom: 0;

  width: min(415px, calc(100vw - 20px));

  background: #FCFCFC;

  border-left: 1px solid #DADADA;

  overflow: auto;
  overscroll-behavior: contain;

  transform:
    translateX(100%)
    translateZ(0);

  transition: transform 240ms cubic-bezier(.47,.13,.35,.85);

  z-index: 1300;

  will-change: transform;
  backface-visibility: hidden;
}

body.toc-open,
html.toc-open {
  overscroll-behavior: none;
}

.toc-open .toc-overlay {
  opacity: 1;
  visibility: visible;
}

.toc-open .toc-panel {
  transform: translateX(0);
}

.toc-panel-header {
  position: sticky;
  top: 0;

  display: flex;
  align-items: center;
  justify-content: space-between;

  height: 54px;
  padding:
    0px
    20px
    0px;

  background: #FCFCFC;

  border-bottom: 1px solid #E3E3E3;

  z-index: 2;
}

.toc-panel-title {
  font-size: 18px;
  font-weight: 600;
}

.toc-close-button {
  display: flex;
  align-items: center;
  justify-content: center;

  width: 34px;
  height: 34px;

  padding: 0;

  background: none;
  border: none;

  color: #0A1F44;

  cursor: pointer;
}

.toc-nav {
  display: flex;
  flex-direction: column;

  padding:
    18px
    20px
    40px;
}

.toc-link {
  position: relative;
  
  display: block;
  align-content: center;
  
  /* min-height: 34px; */
  padding:
      6px 12px
      6px 18px;
  left: 10px;

  color: #363e4c;
  text-decoration: none;

  border-radius: 8px;

  transition:
    background-color 160ms ease,
    color 160ms ease;
}

.toc-link:hover {
    background-color: rgba(10, 31, 68, 0.04);
    color: #0A1F44;
}

.toc-link-active {
  background-color: rgba(10, 31, 68, 0.06);

  color: #0A1F44;

  font-weight: 600;
}

.toc-link-active::before {
  content: '';

  position: absolute;

  top: 50%;

  left: -10px;
  transform: translateY(-50%);

  width: 5px;
  height: 75%;

  border-radius: 999px;

  background: rgba(10, 52, 125, 0.8);
}

.toc-link-level-1 {
  font-size: 14px;
  font-weight: 600;
  line-height: 1.5;

  margin-top: 8px;
}

.toc-link-level-2 {
  font-size: 14px;
  line-height: 1.5;

  padding-left: 33px;
}


/* ========================================= */
/* Main Page Layout */
/* ========================================= */

.page-wrapper {
    width: 100%;
    max-width: 1050px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 40px;
    padding-right: 40px;
}

.doc-container {
    width: 100%;
    max-width: 740px;

    margin-left: auto;
    margin-right: auto;

    padding-top: 56px;
    padding-bottom: 120px;
}

/* ========================================= */
/* Typography */
/* ========================================= */

h4 {
    font-size: 28px;
    line-height: 1.25;
    font-weight: 700;

    color: #202020;

    margin-top: 72px;
    margin-bottom: 16px;
}

h5 {
    font-size: 24px;
    line-height: 1.25;
    font-weight: 700;

    color: #242424;

    margin-top: 72px;
    margin-bottom: 16px;
}

h6 {
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;

    color: #242424;

    margin-top: 0;
    margin-bottom: 10px;
}

p {
    margin-top: 0;
    margin-bottom: 26px;
}

.section-intro {
    margin-bottom: 54px;
}

.subsection {
    margin-bottom: 54px;
}

/* ========================================= */
/* Lists */
/* ========================================= */

ul {
    padding-left: 12px;
    margin-top: -18px;
    margin-bottom: 30px;
}
/* ... */

